--- a/CoffeeShop/Views/User/Register.cshtml
+++ b/CoffeeShop/Views/User/Register.cshtml
@@ -113,7 +113,7 @@
     <script>
         $(function () {
             $(".datepicker").datepicker({
-                dateFormat: "dd/MM/yy",
+                dateFormat: "dd/M/yy",
                 changeMonth: true,
                 changeYear: true,
                 yearRange: "1980:2021",
