--- a/CoffeeShop/Areas/Admin/Views/Employee/Create.cshtml
+++ b/CoffeeShop/Areas/Admin/Views/Employee/Create.cshtml
@@ -89,7 +89,7 @@
     <script>
         $(function () {
             $(".datepicker").datepicker({
-                dateFormat: "dd/MM/yy",
+                dateFormat: "dd/M/yy",
                 changeMonth: true,
                 changeYear: true,
                 yearRange: "1980:2021",
