--- a/CoffeeShop/Views/User/Login.cshtml
+++ b/CoffeeShop/Views/User/Login.cshtml
@@ -16,6 +16,12 @@
     <link rel="shortcut icon" type="image/png" href="~/Assest/Client/img/logo.png" />
 </head>
 <body>
+    <style>
+        li{
+            margin-top: 10px;
+            list-style-type: none;
+        }
+    </style>
     <div class="container-scroller">
         <div class="container-fluid page-body-wrapper full-page-wrapper">
             <div class="row w-100 m-0">
