--- a/CoffeeShop/Areas/Admin/Views/Employee/Create.cshtml
+++ b/CoffeeShop/Areas/Admin/Views/Employee/Create.cshtml
@@ -23,6 +23,15 @@
             </div>
 
             <div class="form-group">
+                @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control", @id = "txtImage" }, id = "txtImage" })
+                    <a href="#" id="btnSelectImage" class="btn btn-primary mr-2">Choose Pictures</a>
+                    @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
                 @Html.LabelFor(model => model.DOB, "Date of birth", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.DOB, new { htmlAttributes = new { @class = "datepicker form-control" } })
@@ -87,6 +96,15 @@
 
     <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
     <script>
+        $('#btnSelectImage').on('click', function (e) {
+            e.preventDefault;
+            var finder = new CKFinder();
+            finder.selectActionFunction = function (url) {
+                $('#txtImage').val(url);
+            };
+            finder.popup();
+        })
+
         $(function () {
             $(".datepicker").datepicker({
                 dateFormat: "dd/M/yy",
