--- a/CoffeeShop/Areas/Admin/Views/Employee/Edit.cshtml
+++ b/CoffeeShop/Areas/Admin/Views/Employee/Edit.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+
 @section header{
     Modify employee
 }
@@ -27,6 +28,15 @@
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.EmployeeName, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.EmployeeName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control", @id = "txtImage" }, id = "txtImage" })
+                    <a href="#" id="btnSelectImage" class="btn btn-primary mr-2">Choose Pictures</a>
+                    @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -99,7 +109,16 @@
 <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
 @section scripts{
     <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
-    <script type="text/javascript">
+    <script>
+        $('#btnSelectImage').on('click', function (e) {
+            e.preventDefault;
+            var finder = new CKFinder();
+            finder.selectActionFunction = function (url) {
+                $('#txtImage').val(url);
+            };
+            finder.popup();
+        })
+
         $(document).ready(function () {
             $('input[type=datetime]').datepicker({
                 dateFormat: "dd/M/yy",
