--- a/CoffeeShop/Areas/Admin/Views/Event/Create.cshtml
+++ b/CoffeeShop/Areas/Admin/Views/Event/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Create";
-    Layout = "~/Areas/Admin/Views/Shared/_Layouts.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
 @section header{
@@ -38,7 +38,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Discription, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.TextAreaFor(model => model.Discription, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.TextAreaFor(model => model.Discription, new { htmlAttributes = new { @class = "form-control" }, id="txtContent"})
                         @Html.ValidationMessageFor(model => model.Discription, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -55,3 +55,11 @@
         }
     </div>
 </div>
+
+@section scripts{
+    <script>
+        var editor = CKEDITOR.replace('txtContent', {
+            customConfig: '/Assest/Admin/ckeditor/config.js'
+        });
+    </script>
+}
