--- a/CoffeeShop/Areas/Admin/Views/Event/Edit.cshtml
+++ b/CoffeeShop/Areas/Admin/Views/Event/Edit.cshtml
@@ -37,7 +37,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Discription, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextAreaFor(model => model.Discription, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextAreaFor(model => model.Discription, new { htmlAttributes = new { @class = "form-control" }, id = "txtContent" })
                     @Html.ValidationMessageFor(model => model.Discription, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -53,3 +53,11 @@
         }
     </div>
 </div>
+
+@section scripts{
+    <script>
+        var editor = CKEDITOR.replace('txtContent', {
+            customConfig: '/Assest/Admin/ckeditor/config.js'
+        });
+    </script>
+}
