--- a/CoffeeShop/Areas/Admin/Views/News/Create.cshtml
+++ b/CoffeeShop/Areas/Admin/Views/News/Create.cshtml
@@ -6,12 +6,12 @@
 }
 
 @section header{
-    Create event
+    Create news
 }
 
 <div class="card">
     <div class="card-body">
-        @using (Html.BeginForm("Create", "Event", FormMethod.Post))
+        @using (Html.BeginForm("Create", "News", FormMethod.Post))
         {
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -26,7 +26,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Discription, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextAreaFor(model => model.Discription, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextAreaFor(model => model.Discription, new { htmlAttributes = new { @class = "form-control" }, id = "txtContent" })
                     @Html.ValidationMessageFor(model => model.Discription, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -42,3 +42,11 @@
         }
     </div>
 </div>
+
+@section scripts{
+    <script>
+        var editor = CKEDITOR.replace('txtContent', {
+            customConfig: '/Assest/Admin/ckeditor/config.js'
+        });
+    </script>
+}
