--- a/CoffeeShop/Areas/Admin/Views/Shared/_LoginPartial.cshtml
+++ b/CoffeeShop/Areas/Admin/Views/Shared/_LoginPartial.cshtml
@@ -1,11 +1,20 @@
 ﻿@{
     var account = Session["Account"];
+    string item = "";
+    if (Session["Image"] != null)
+    {
+        item = Session["Image"].ToString();
+    }
+    else
+    {
+        item = "/Assest/Admin/images/faces/face15.jpg";
+    }
 }
 <ul class="navbar-nav navbar-nav-right">
     <li class="nav-item dropdown">
         <a class="nav-link" id="profileDropdown" href="#" data-toggle="dropdown">
             <div class="navbar-profile">
-                <img class="img-xs rounded-circle" src="~/Assest/Admin/images/faces/face15.jpg" alt="">
+                <img class="img-xs rounded-circle" src="@item" alt="">
                 <p class="mb-0 d-none d-sm-block navbar-profile-name">@account.ToString()</p>
                 <i class="mdi mdi-menu-down d-none d-sm-block"></i>
             </div>
