--- a/CoffeeShop/Views/Shared/_Layout.cshtml
+++ b/CoffeeShop/Views/Shared/_Layout.cshtml
@@ -14,6 +14,30 @@
     <link rel="shortcut icon" href="~/Assest/Client/img/favicon.ico" type="image/x-icon" />
 </head>
 <body>
+    <style>
+        .acc-opt {
+            position: relative;
+        }
+
+        .acc-opt-menu {
+            display: none;
+            position: absolute;
+            width: 140px;
+            z-index: 10;
+            background: black;
+            border-bottom-left-radius: 20%;
+            border-bottom-right-radius: 20%;
+        }
+
+            .acc-opt-menu li a {
+                font-size: 10px;
+                padding-bottom: 5px;
+            }
+
+        .acc-opt:hover .acc-opt-menu {
+            display: block;
+        }
+    </style>
     <div id="loader-wrapper">
         <div id="loader"></div>
         <div class="loader-section section-left"></div>
@@ -30,8 +54,8 @@
     <footer>
         @Html.Partial("_Footer")
     </footer>
-    <script type="text/javascript" src="~/Assest/Client/js/jquery-1.11.2.min.js"></script>      
-    <script type="text/javascript" src="~/Assest/Client/js/templatemo-script.js"></script>      
+    <script type="text/javascript" src="~/Assest/Client/js/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="~/Assest/Client/js/templatemo-script.js"></script>
     @RenderSection("jsFooter", required: false);
 </body>
 </html>
