Add Ingredient table

--- a/CoffeeShop/Areas/Admin/Views/Shared/_Sidebar.cshtml
+++ b/CoffeeShop/Areas/Admin/Views/Shared/_Sidebar.cshtml
@@ -79,6 +79,21 @@
             </div>
         </li>
         <li class="nav-item menu-items">
+            <a class="nav-link" data-toggle="collapse" href="#ingredient-ui" aria-expanded="false" aria-controls="ingredient-ui">
+                <span class="menu-icon">
+                    <i class="mdi mdi-script"></i>
+                </span>
+                <span class="menu-title">Ingredient</span>
+                <i class="menu-arrow"></i>
+            </a>
+            <div class="collapse" id="ingredient-ui">
+                <ul class="nav flex-column sub-menu">
+                    <li class="nav-item"> <a class="nav-link" href="/Admin/Ingredient">List Ingredient</a></li>
+                    <li class="nav-item"> <a class="nav-link" href="/Admin/Ingredient/Create">Create Ingredient</a></li>
+                </ul>
+            </div>
+        </li>
+        <li class="nav-item menu-items">
             <a class="nav-link" data-toggle="collapse" href="#bill-ui" aria-expanded="false" aria-controls="bill-ui">
                 <span class="menu-icon">
                     <i class="mdi mdi-cash-usd"></i>
