--- a/CoffeeShop/Views/Shared/_Layout.cshtml
+++ b/CoffeeShop/Views/Shared/_Layout.cshtml
@@ -55,6 +55,7 @@
         @Html.Partial("_Footer")
     </footer>
     <script type="text/javascript" src="~/Assest/Client/js/jquery-1.11.2.min.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
     <script type="text/javascript" src="~/Assest/Client/js/templatemo-script.js"></script>
     @RenderSection("jsFooter", required: false);
 </body>
