--- a/CoffeeShop/Views/Cart/Index.cshtml
+++ b/CoffeeShop/Views/Cart/Index.cshtml
@@ -32,7 +32,19 @@
                             }
                             else
                             {
-                                <li>Xin chào: @Session["Account"].ToString()</li>
+                                var names = Session["Account"].ToString().Split(' ');
+                                <li class="acc-opt" style="margin-top: 15px">
+                                    Xin chào: @names[2]
+                                    <ul class="acc-opt-menu">
+                                        <li>
+                                            <a href="/User/Edit/@Session["Id"]">Sửa thông tin</a>
+                                        </li>
+                                        <li>
+                                            <a href="/User/ChangePassword/@Session["Id"]">Đổi mật khẩu</a>
+                                        </li>
+                                        <li><a href="/User/Logout" style="padding-bottom: 15px;">Đăng xuất</a></li>
+                                    </ul>
+                                </li>
                             }
                         </ul>
                     </nav>
@@ -42,14 +54,14 @@
     </div>
 }
 <div class="tm-main-section light-gray-bg" style="padding-top: 0px; margin-bottom:20px">
-    <div class="container">
+    <div class="container" id="div-container">
         <div class="col-lg-12 tm-section-header-container" style="margin-bottom: 10px">
             <h2 class="tm-section-header gold-text tm-handwriting-font" style="font-size: 40px">Cart</h2>
             <div class="tm-hr-container"><hr class="tm-hr"></div>
         </div>
         @if (Model.Count > 0)
         {
-            <table class="table">
+            <table class="table" id="dataTable">
                 <thead>
                     <tr>
                         <td scope="row">Ảnh SP</td>
@@ -64,33 +76,63 @@
                     @foreach (var item in Model)
                     {
                         <tr>
-                            <td><img src="@item.Product.Image" width="100" style="border-radius: 50%"/></td>
+                            <td><img src="@item.Product.Image" width="100" style="border-radius: 50%" /></td>
                             <td style="font-size: 18px">@item.Product.ProductName</td>
                             <td>
                                 @using (Html.BeginForm("UpdateQuantity", "Cart"))
                                 {
-                                    <input type="hidden" value="@item.Product.ProductID" name="IDProduct"/>
+                                    <input type="hidden" value="@item.Product.ProductID" name="IDProduct" />
                                     <input type="number" name="quantity" data-id="@item.Product.ProductID" value="@item.Quantity" />
                                     <input type="submit" value="Update Quantity" />
                                 }
                             </td>
                             <td>@item.Product.Price.GetValueOrDefault(0).ToString("N0").000đ</td>
                             <td>@((item.Product.Price.GetValueOrDefault(0) * item.Quantity).ToString("N0")).000đ</td>
-                            <td><a href="#" data-id="@item.Product.ProductID" class="btnDelete"><i class="fas fa-trash"></i></a></td>
+                            <td>
+                                @Ajax.ActionLink(" ", "Delete", new { id = item.Product.ProductID },
+                                       new AjaxOptions
+                                       {
+                                           Confirm = "Bạn có muốn xóa sản phẩm này?",
+                                           OnComplete = "$(this).closest('tr').remove()",
+                                           HttpMethod = "Delete"
+                                       }, new { @class = "fas fa-trash" })
+                            </td>
                         </tr>
                     }
                 </tbody>
             </table>
-            <a href="/Product" class="btn btn-primary">Tiếp tục mua hàng</a>
-            <button id="btnUpdate" class="btn btn-primary">Cập nhật giỏ hàng</button>
-            <button id="btnDeleteAll" class="btn btn-primary">Xóa giỏ hàng</button>
-            <a href="/Cart/Payment" id="btnPayment" class="btn btn-primary">Thanh toán</a>
+            <div id="buttons">
+                <a href="/Product" class="btn btn-primary">Tiếp tục mua hàng</a>
+                <button id="btnDeleteAll" class="btn btn-primary">Xóa giỏ hàng</button>
+                <a href="/Cart/Payment" id="btnPayment" class="btn btn-primary">Thanh toán</a>
+            </div>
         }
         else
         {
             <form action="/Product" style="margin: 0 auto; width: 400px">
-                <input style="height: 54px" class="btn btn-default btn-fw" type="submit" value="Bạn chưa thêm mặt hàng nào. Hãy trở về trang sản phẩm" />
+                <input style="height: 54px" class="btn btn-default btn-fw" type="submit" value="Bạn chưa thêm mặt hàng nào! Hãy trở về trang sản phẩm." />
             </form>
         }
     </div>
 </div>
+
+@section jsFooter{
+    <script>
+        var table = document.getElementById("dataTable");
+        var buttons = document.getElementById("buttons");
+        $("#btnDeleteAll").click(function () {
+            var conf = confirm("Bạn muốn xóa toàn bộ giỏ hàng?");
+            if (conf == true) {
+                $.ajax({
+                    url: 'Cart/DeleteAllCart',
+                    type: 'GET'
+                }).done(function () {
+                    table.remove();
+                    buttons.remove();
+                    alert("Giỏ hàng đã được xóa");
+                    location.replace("/Product");
+                })
+            }
+        });
+    </script>
+} 
