--- a/CoffeeShop/Views/Contact/Index.cshtml
+++ b/CoffeeShop/Views/Contact/Index.cshtml
@@ -23,6 +23,29 @@
                             <li><a href="/Product">Menu</a></li>
                             <li><a href="#" class="active">Liên hệ</a></li>
                             <li><a href="/Cart"><i class="fas fa-shopping-cart" style="margin-right: 5px"></i>Giỏ hàng</a></li>
+                            @{
+                                var session = (EmployeeLogin)Session[CoffeeShop.Common.CommonConstants.EMPLOYEE_SESSION];
+                            }
+                            @if (session == null)
+                            {
+                                <li><a href="/User/Login">Đăng ký / Đăng nhập</a></li>
+                            }
+                            else
+                            {
+                                var names = Session["Account"].ToString().Split(' ');
+                                <li class="acc-opt" style="margin-top: 15px">
+                                    Xin chào: @names[2]
+                                    <ul class="acc-opt-menu">
+                                        <li>
+                                            <a href="/User/Edit/@Session["Id"]">Sửa thông tin</a>
+                                        </li>
+                                        <li>
+                                            <a href="/User/ChangePassword/@Session["Id"]">Đổi mật khẩu</a>
+                                        </li>
+                                        <li><a href="/User/Logout" style="padding-bottom: 15px;">Đăng xuất</a></li>
+                                    </ul>
+                                </li>
+                            }
                         </ul>
                     </nav>
                 </div>
