--- a/CoffeeShop/Views/News/Index.cshtml
+++ b/CoffeeShop/Views/News/Index.cshtml
@@ -32,7 +32,19 @@
                             }
                             else
                             {
-                                <li>Xin chào: @Session["Account"].ToString()</li>
+                                var names = Session["Account"].ToString().Split(' ');
+                                <li class="acc-opt" style="margin-top: 15px">
+                                    Xin chào: @names[2]
+                                    <ul class="acc-opt-menu">
+                                        <li>
+                                            <a href="/User/Edit/@Session["Id"]">Sửa thông tin</a>
+                                        </li>
+                                        <li>
+                                            <a href="/User/ChangePassword/@Session["Id"]">Đổi mật khẩu</a>
+                                        </li>
+                                        <li><a href="/User/Logout" style="padding-bottom: 15px;">Đăng xuất</a></li>
+                                    </ul>
+                                </li>
                             }
                         </ul>
                     </nav>
