--- a/CoffeeShop/Views/Product/Index.cshtml
+++ b/CoffeeShop/Views/Product/Index.cshtml
@@ -33,7 +33,19 @@
                             }
                             else
                             {
-                                <li>Xin chào: @Session["Account"].ToString()</li>
+                                var names = Session["Account"].ToString().Split(' ');
+                                <li class="acc-opt" style="margin-top: 15px">
+                                    Xin chào: @names[2]
+                                    <ul class="acc-opt-menu">
+                                        <li>
+                                            <a href="/User/Edit/@Session["Id"]">Sửa thông tin</a>
+                                        </li>
+                                        <li>
+                                            <a href="/User/ChangePassword/@Session["Id"]">Đổi mật khẩu</a>
+                                        </li>
+                                        <li><a href="/User/Logout" style="padding-bottom: 15px;">Đăng xuất</a></li>
+                                    </ul>
+                                </li>
                             }
                         </ul>
                     </nav>
@@ -52,7 +64,6 @@
             <div class="tm-position-relative margin-bottom-30" style="position: -webkit-sticky; position: sticky; top: 5px;">
                 <nav class="tm-side-menu">
                     <ul>
-                        <li><h4 style="margin-bottom: 6px; font-weight:bold" class="gold-text tm-handwriting-font">Menu</h4></li>
                         @foreach (var category in listCategory)
                         {
                             <li><a href="#_@category">@category</a></li>
