--- a/CoffeeShop/Views/User/Edit.cshtml
+++ b/CoffeeShop/Views/User/Edit.cshtml
@@ -43,6 +43,9 @@
                                         <li>
                                             <a href="/User/ChangePassword/@Session["Id"]">Đổi mật khẩu</a>
                                         </li>
+                                        <li>
+                                            <a href="/User/ViewHistory/@Session["Id"]">Lịch sử mua hàng</a>
+                                        </li>
                                         <li style="border-bottom-left-radius: 50%"><a href="/User/Logout" style="padding-bottom: 15px">Đăng xuất</a></li>
                                     </ul>
                                 </li>
