--- a/CoffeeShop/Views/User/Register.cshtml
+++ b/CoffeeShop/Views/User/Register.cshtml
@@ -10,7 +10,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Register</title>
+    <title>Đăng ký</title>
     <link rel="stylesheet" href="~/Assest/Admin/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="~/Assest/Admin/vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="~/Assest/Admin/css/style.css">
