--- a/CoffeeShop/Views/User/Login.cshtml
+++ b/CoffeeShop/Views/User/Login.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Login</title>
+    <title>Đăng nhập</title>
     <link rel="stylesheet" href="~/Assest/Admin/css/style.css">
     <link rel="stylesheet" href="~/Assest/Admin/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="~/Assest/Admin/vendors/css/vendor.bundle.base.css">
